--- a/src/GUI/Resources/standard.css
+++ b/src/GUI/Resources/standard.css
@@ -63,4 +63,12 @@ PlaylistView
 QComboBox
 {
 	padding-left: 2px;
+	padding-right: 12px;
+}
+
+QComboBox,
+QLineEdit
+{
+	min-height: 22px;
+	height: 22px;
 }
