--- a/src/3rdParty/SomaFM/ui/GUI_SomaFM.ui
+++ b/src/3rdParty/SomaFM/ui/GUI_SomaFM.ui
@@ -63,13 +63,6 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" rowspan="10">
-    <widget class="SearchableListView" name="lv_stations">
-     <property name="alternatingRowColors">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="11" column="2">
     <widget class="QLabel" name="label_3">
      <property name="font">
@@ -224,13 +217,44 @@ border: 2px solid #202020;
      </property>
     </widget>
    </item>
+   <item row="4" column="0" rowspan="9">
+    <widget class="SearchableTableView" name="tv_stations">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="showGrid">
+      <bool>false</bool>
+     </property>
+     <property name="gridStyle">
+      <enum>Qt::NoPen</enum>
+     </property>
+     <attribute name="horizontalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>SearchableListView</class>
-   <extends>QListView</extends>
-   <header>GUI/Helper/SearchableWidget/SearchableListView.h</header>
+   <class>SearchableTableView</class>
+   <extends>QTableView</extends>
+   <header>GUI/Helper/SearchableWidget/SearchableTableView.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
