--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -1,4 +1,6 @@
 /* http://doc.qt.io/qt-5/stylesheet-examples.html#customizing-qtreeview */
+/* blue: #424e72 */
+/* orange: #e8841a; */
 QWidget {
 	border: none;
 	color: #D8D8D8;
@@ -97,7 +99,7 @@ QTreeWidget,
 LibraryGenreView
 {
 	border: 1px solid #282828;
-	border-radius: 2px;
+/*	border-radius: 2px;*/
 	color: #D8D8D8;
 	background-color: #282828;
 	alternate-background-color: #242424;
@@ -382,7 +384,7 @@ QMenu::Icon:unchecked {
 
 QMenu::separator {
 	height: 1px;
-	background: #202020;
+	background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop:0 transparent, stop: 0.3 #242424, stop: 0.7 #242424, stop: 1.0 transparent);
 	margin: 3px 5px;
 }
 
@@ -491,7 +493,8 @@ GUI_TagEdit RatingLabel {
 }
 
 QTabBar::tab {
-	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #525252, stop: 0.4 #383838, stop: 0.5 #383838, stop: 1.0 #383838);
+	/* background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #525252, stop: 0.4 #383838, stop: 0.5 #383838, stop: 1.0 #383838); */
+	background: rgba(255,255,255,10);
 	border: 1px solid #2c2c2c;
 	border-bottom: none;
 	border-top-left-radius: 2px;
@@ -508,7 +511,7 @@ QTabBar::tab {
 
 PlaylistTabBar::tab:last {
 
-	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #484848, stop: 0.4 #383838, stop: 0.5 #383838, stop: 1.0 #383838);
+	/* background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #484848, stop: 0.4 #383838, stop: 0.5 #383838, stop: 1.0 #383838); */
 
 	min-width: 1.5ex;
 	max-width: 1.5ex;
@@ -529,7 +532,8 @@ QTabBar::tab:disabled {
 
 
 QTabBar::tab:selected, QTabBar::tab:hover {
-	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #555555, stop: 0.4 #484848, stop: 1.0 #383838);
+	/* background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #555555, stop: 0.4 #484848, stop: 1.0 #383838); */
+	background: rgba(255,255,255,20);
 }
 
 QTabBar::tab:!selected {
