--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -210,9 +210,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
 QScrollBar::handle:vertical {
 	background: #444444;
 	min-height: 30px;
-	width: 12px;
-	border: 1px solid #2b2b2b;
-	border-radius: 1px;
+	margin: 2px;
 }
 
 QScrollBar::handle:vertical:hover {
@@ -532,9 +530,13 @@ QTabBar::tab:disabled {
 
 
 QTabBar::tab:selected, QTabBar::tab:hover {
-	/* background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #555555, stop: 0.4 #484848, stop: 1.0 #383838); */
 	background: rgba(255,255,255,20);
 }
+
+QTabBar::tab:hover {
+	/* border-top: 1px solid #e8841a; */ 
+}
+
 
 QTabBar::tab:!selected {
 	border-bottom: 1px solid #2c2c2c;
