--- a/src/GUI/PlayerPlugins/Speed/GUI_Speed.ui
+++ b/src/GUI/PlayerPlugins/Speed/GUI_Speed.ui
@@ -23,6 +23,12 @@
    </size>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="horizontalSpacing">
+    <number>20</number>
+   </property>
+   <property name="verticalSpacing">
+    <number>6</number>
+   </property>
    <item row="1" column="0" rowspan="2" colspan="3">
     <widget class="Line" name="line">
      <property name="orientation">
@@ -49,12 +55,6 @@
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="tickPosition">
-      <enum>QSlider::TicksBelow</enum>
-     </property>
-     <property name="tickInterval">
-      <number>5</number>
      </property>
     </widget>
    </item>
