--- a/src/GUI/PlayerPlugins/Speed/GUI_Speed.ui
+++ b/src/GUI/PlayerPlugins/Speed/GUI_Speed.ui
@@ -37,7 +37,7 @@
     </widget>
    </item>
    <item row="2" column="1" rowspan="2">
-    <widget class="QSlider" name="sli_speed">
+    <widget class="SayonaraSlider" name="sli_speed">
      <property name="minimum">
       <number>50</number>
      </property>
@@ -155,6 +155,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SayonaraSlider</class>
+   <extends>QSlider</extends>
+   <header>GUI/Helper/SayonaraWidget/SayonaraSlider.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
